Fix silly offcenter sidebar on mobile

--- a/bluelog/static/css/style.css
+++ b/bluelog/static/css/style.css
@@ -24,8 +24,10 @@ img {
     margin-top: 10px;
 }
 
-.sidebar {
+@media (min-width: 576px) {
+  .sidebar {
     padding-left: 30px;
+  }
 }
 
 footer {
